--- a/educa/courses/templates/courses/manage/course/list.html
+++ b/educa/courses/templates/courses/manage/course/list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load course %}
 {% block title %}My courses{% endblock %}
 {% block content %}
  <h1>My courses</h1>
@@ -9,6 +10,11 @@
         <p>
         <a href="{% url "course_edit" course.id %}">Edit</a>
         <a href="{% url "course_delete" course.id %}">Delete</a>
+        <a href="{% url "course_module_update" course.id %}">Edit modules</a>
+        <a href="{% url "course_module_update" course.id %}">Edit modules</a>
+        {% if course.modules.count > 0 %}
+            <a href="{% url "module_content_list" course.modules.first.id %}">Manage contents</a>
+        {% endif %}
         </p>
         </div>
         {% empty %}
